# agile-team-mcp-server

./: .env.sample  .gitignore  .mcp.json  CLAUDE.md  MANIFEST.in  README.md  activate_voice.py  pyproject.toml  voice_mode.py
.claude/commands/: add-feature.md  send-to-github.md
ai_docs/: llm_providers_details.xml
output/: b71ab.yml  e0459.yml  f6640.yml
prompts/: diagram.md  uv_script.txt
specs/: model-wrapper-spec.md  tool-llm-as-a-ba.md  tool-llm-as-a-decision.md  tool-llm-as-a-pm.md  tool-llm-as-a-sw.md  tool-llm-wrapper-spec.md
src/agile_team/: __init__.py  main.py  server.py
src/agile_team/shared/: __init__.py  config.py  data_types.py  model_router.py  utils.py  validator.py
src/agile_team/shared/llm_providers/: gemini.py  openai.py  testing.py
src/agile_team/tests/: __init__.py  test_server_prompts.py
src/agile_team/tests/shared/: __init__.py  test_model_router.py  test_utils.py  test_validator.py
src/agile_team/tests/tools/: __init__.py  test_decision_maker.py  test_list_models.py  test_list_providers.py  test_persona_ba.py  test_persona_base.py  test_persona_dm.py  test_persona_pm.py  test_persona_sw.py  test_prompt.py  test_prompt_from_file.py  test_prompt_from_file_to_file.py
src/agile_team/tools/: __init__.py  decision_maker.py  list_models.py  list_providers.py  persona_ba.py  persona_base.py  persona_dm.py  persona_pm.py  persona_sw.py  prompt.py  prompt_from_file.py  prompt_from_file_to_file.py
src/agile_team/tools/prompts/: ba_decision_prompt.md  ba_prompt-v2.md  ba_prompt.md  dm_prompt.md  pm_decision_prompt.md  pm_prompt-v2.md  (+4 more)
(+6 files in other folders)
